pdf test - issue with blurrines

--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -39,6 +39,13 @@
     overflow: auto;
     height: 100%;
 }
+iframe {
+    border: thick solid red;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 660;
+}
 /* .react-pdf__Page__textContent, .annotationLayer{
     background-color: gold;
     display: none;
